--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -165,7 +165,7 @@ form {
 
 .quoteBox {
   display: flex;
-  width: 90%;
+  width: 85%;
   background: white;
   border: 1px solid black;
   border-radius: 1.25em;
@@ -182,6 +182,8 @@ form {
     width: 100%;
     text-align: center;
     font-size: 1.25rem; }
+    .quoteBox .subtitle p {
+      margin: 10px auto; }
 
 body {
   font-family: 'Gloria Hallelujah', cursive;
